Sun Aug  8 00:43:31 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/implicit.c: added sexagecimal float#base60.

	* ext/syck/rubyext.c (yaml_org_handler): ditto.

	* lib/token.c: indentation absolutely ignored when processing flow
	  collections.  plain scalars are trimmed if indentation follows in
	  an ambiguous flow collection.

Sat Aug  7 00:50:01 2004  Tanaka Akira  <akr@m17n.org>

	* ext/zlib/zlib.c: Zlib::GzipReader#read(0) returns "" instead of nil.

Mon Aug  3 13:49:12 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/namespace.rb: bug fix

	* ext/tk/lib/tkextlib/treectrl/tktreectrl.rb: add Tk::TreeCtrl.loupe

Mon Aug  2 23:33:48 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/ruby/test_file.rb (test_fnmatch): added more tests.

Mon Aug  2 18:04:21 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/msgcat.rb (set_translation): bug fix (fail to set
	  trans_str to the same as src_str when trans_str is not given.)

Mon Aug  2 17:40:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (blk_free): fixed serious memory leak. [ruby-dev:24013]

Mon Aug  2 11:53:06 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/code_objects.rb (RDoc::Context::find_symbol): Fix infinite recursion
	  looking up some top level symbols (batsman)

Mon Aug  2 11:48:29 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::do_methods): Allow '.'s in
	  variable names to support SWIG generated files (Hans Fugal)

Sat Jul 31 23:08:00 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): stupid mistakes fixed. [ruby-dev:24006]
	
Sat Jul 31 17:39:47 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-expr-beg, ruby-parse-partial,
	  ruby-calculate-indent, ruby-move-to-block, ruby-forward-sexp,
	  ruby-backward-sexp): keywords must match word-wise.

Sat Jul 31 13:37:51 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
